[change] ユーザー登録周りの仕様をワイヤフレームの仕様に変更
