# services/soso-api/internal/model/user.go
@@ -7,10 +7,10 @@ import (
 type User struct {
 	ID           string    `db:"id"`
 	Username     string    `db:"username"`
+	MailAddress  string    `db:"mail_address"`
 	PasswordHash string    `db:"password_hash"`
 	HasCar       bool      `db:"has_car"`
 	Capacity     int       `db:"capacity"`
-	SoSoPoints   int       `db:"soso_points"`
 	CreatedAt    time.Time `db:"created_at"`
 	UpdatedAt    time.Time `db:"updated_at"`
 }
